--- a/interim-report/Files/Nomenclature.tex
+++ b/interim-report/Files/Nomenclature.tex
@@ -2,6 +2,7 @@
 \begin{itemize}
 \item $\vec{b}_i$ - position of ith connection point at base with respect to B
 \item B - coordinate system defined at center of base plate
+\item COG - Center of Gravity
 \item DAQA - Data Acquisition System
 \item DOF - Degrees of Freedom
 \item ELB - Engineering Laboratory Building
@@ -10,9 +11,11 @@
 \item $F$ - vector of leg forces
 \item $H$ - transformation matrix which related measured forces and applied forces
 \item $\hat{I}_i$ - Unit vector along the ith leg 
+\item J - Jacobian Matrix 
 \item JKUAT - Jomo Kenyatta University of Agriculture and Technology
 \item $\vec{M}_e$ - external momment applied to platform
 \item NASA - National Space Agency
+\item $\hat{{S_{i}}}$ - unit vector of the Plucker coordinates
 \item SPI - Serial Peripheral Interface
 \end{itemize}
 \pagebreak
