--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -94,15 +94,17 @@
    \large{Department of Mechatronic Engineering}\\
 
     ------------------------------------------------------------------------------------------------\\[1.0cm]
+    \vspace{0.1cm}
     \LARGE{\textbf{Development of a 6 DOF Stewart platform
-        Force Balance for a Low Speed Wind Tunnel}}\\[0.6cm]
+        Force Balance for a Low Speed Wind Tunnel}}\\
+    \vspace{0.3cm}
     \LARGE{\textbf{FYP 18-9
             }}\\
-    \LARGE{\textbf{INTERIM REPORT
-                }}\\[0.6cm]
+    {\textbf{INTERIM REPORT
+                }}\\[0.4cm]
     %\large{by}\\[0.6cm
 
-    \vspace{0.5cm}
+    \vspace{0.4cm}
     \large{\textbf{Sammy Kerata Oina (ENM221-0089/2017)
             }}\\
      \large{\textbf{Earl Spencer Mogire~(ENM221-0074/2017)
@@ -110,9 +112,9 @@
     \large{\textbf{Supervisors}}\\
     \large{Dr. Anthony K. Muchiri
                 }\\
-         \large{Ms. maurine N. Andanje}\\
-    %\large{\textbf{Technologist}}\\
-       % Mr. J. Mbugua\\
+    \large{Ms. Maurine N. Andanje
+                    }\\
+     %Submitted in partial fulfillment of the requirements for the degree of Bachelor of Science in Mechatronic Engineering in Jomo Kenyatta University of Agriculture and Technology, 2022.
 %     \large{\textbf{Supervisors}}\\
 %    \large{Dr.-Ing.~Jackson G. Njiri}\\
 %    \large{Prof. George N. Nyakoe}\\
