--- a/interim-report/Files/Nomenclature.tex
+++ b/interim-report/Files/Nomenclature.tex
@@ -5,17 +5,23 @@
 \item COG - Center of Gravity
 \item DAQA - Data Acquisition System
 \item DOF - Degrees of Freedom
+\item UDP - User Datagram Protocol
 \item ELB - Engineering Laboratory Building
 \item $\vec{F}_e$ - external force applied to platform
 \item $f_i$ - force exterted on ith leg due $F_e, M_e$
 \item $F$ - vector of leg forces
 \item $H$ - transformation matrix which related measured forces and applied forces
 \item $\hat{I}_i$ - Unit vector along the ith leg 
+\item I2C - Inter-Integrated Circuit 
 \item J - Jacobian Matrix 
 \item JKUAT - Jomo Kenyatta University of Agriculture and Technology
-\item $\vec{M}_e$ - external momment applied to platform
+\item $\vec{M}_e$ - external moment applied to platform
 \item NASA - National Space Agency
+\item RS - Recommended Standard
 \item $\hat{{S_{i}}}$ - unit vector of the Plucker coordinates
+\item SCL - Serial Clock
+\item SDA - Serial Data
 \item SPI - Serial Peripheral Interface
+\item TTL - Transistor-Transistor Logic
 \end{itemize}
 \pagebreak
