--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -6,7 +6,7 @@ Stewart platform assembly will be used to position a model under testing in the 
 	\begin{figure}[!h]
 	\centering
 	\includegraphics[width=0.8\linewidth]{Figures/Assembly}
-	\caption[Assembled Platform]{Assemly of Stewart Platform}
+	\caption[Assembled Platform]{Assembly of Stewart Platform}
 	\end{figure}
 \end{center}
 \begin{center}
@@ -66,7 +66,7 @@ Von Mise's stress does not exceed the Yield Stress of Aluminum (275 MPa) hence t
 Application of loads on the platform translates to induced strain in the Stewart platform legs. This will provide an input for the strain gauges used for force measurements.
 
 \section{Human Machine Interface}
-The user interface of the platform was programmed usig golang and this resulted in the view below with the use of sliders for platform positionning and buttons to set model orientationa and start data collection.
+The user interface of the platform was programmed using golang and this resulted in the view below with the use of sliders for platform positioning and buttons to set model orientationa and start data collection.
 \begin{center}
 	\begin{figure}[!h]
 	\centering
