--- a/interim-report/Files/Nomenclature.tex
+++ b/interim-report/Files/Nomenclature.tex
@@ -10,6 +10,7 @@
 \item $\vec{F}_e$ - external force applied to platform
 \item $f_i$ - force exterted on ith leg due $F_e, M_e$
 \item $F$ - vector of leg forces
+\item FEA - Finite Element Analysis
 \item $H$ - transformation matrix which related measured forces and applied forces
 \item $\hat{I}_i$ - Unit vector along the ith leg 
 \item I2C - Inter-Integrated Circuit 
