--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -66,7 +66,7 @@ Von Mise's stress does not exceed the Yield Stress of Aluminum (275 MPa) hence t
 Application of loads on the platform translates to induced strain in the Stewart platform legs. This will provide an input for the strain gauges used for force measurements.
 
 \section{Human Machine Interface}
-The user interface of the platform was programmed using golang and this resulted in the view below with the use of sliders for platform positioning and buttons to set model orientationa and start data collection.
+The user interface of the platform was programmed using golang and this resulted in the view below with the use of sliders for platform positioning and buttons to set model orientations and start data collection.
 \begin{center}
 	\begin{figure}[!h]
 	\centering
@@ -76,7 +76,7 @@ The user interface of the platform was programmed using golang and this resulted
 \end{center}
 
 \section{PCB}
-The schematics from the electrical designs as seen in the aooendix were routed to generate a PCB ready for maufucture. This is shown in the 3D rennder below:
+The schematics from the electrical designs as seen in the appendix were routed to generate a PCB ready for manufacture. This is shown in the 3D render below:
 \begin{center}
 	\begin{figure}[!h]
 	\centering
