--- a/interim-report/Files/Nomenclature.tex
+++ b/interim-report/Files/Nomenclature.tex
@@ -12,6 +12,7 @@
 \item $F$ - vector of leg forces
 \item FEA - Finite Element Analysis
 \item $H$ - transformation matrix which related measured forces and applied forces
+\item HMI - Human Machine Interface
 \item $\hat{I}_i$ - Unit vector along the ith leg 
 \item I2C - Inter-Integrated Circuit 
 \item J - Jacobian Matrix 
