--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -75,6 +75,8 @@ The user interface of the platform was programmed using golang and this resulted
 	\end{figure}
 \end{center}
 
+This includes slider buttons to control platform position and orientation. It also includes buttons to allow for data capture  and platform control. The dashboard also has a live plot of incoming data to provide immediate user feedback.
+
 \section{PCB}
 The schematics from the electrical designs as seen in the appendix were routed to generate a PCB ready for manufacture. This is shown in the 3D render below:
 \begin{center}
